--- a/package.xml
+++ b/package.xml
@@ -15,7 +15,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <build_depend>robo_cont_types</build_depend>
+  <build_depend>dyret_common</build_depend>
 
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
