--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>dyret_common</build_depend>
+  <build_depend>dyret_hardware</build_depend>
 
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
