--- a/cfg/gaitControllerParams.cfg
+++ b/cfg/gaitControllerParams.cfg
@@ -30,6 +30,9 @@ gait.add("wagAmplitude_y", double_t, 0,
 gait.add("wagPhase", double_t, 0,
          "phase offset of wag",
          0, -0.20, 0.20)
+gait.add("liftDuration", double_t, 0,
+         "duration of leg lift",
+         0.125, 0.05, 0.20)
 
 
 coxa = gen.add_group("Coxa")
