Added support for PID configuration on new protocol

--- a/cfg/gaitControllerParams.cfg
+++ b/cfg/gaitControllerParams.cfg
@@ -36,37 +36,37 @@ gait.add("liftDuration", double_t, 0,
 
 
 coxa = gen.add_group("Coxa")
-coxa.add("cP", int_t, 0,
+coxa.add("cP", double_t, 0,
          "Coxa P",
-         86, 0, 254)
-coxa.add("cI", int_t, 0, 
+         4.0, 0.0, 254.0)
+coxa.add("cI", double_t, 0, 
          "Coxa I",
-         0, 0, 254)
-coxa.add("cD", int_t, 0, 
+         0.0, 0.0, 254.0)
+coxa.add("cD", double_t, 0, 
          "Coxa D",
-         10, 0, 254)
+         0.05, 0.0, 254.0)
 
 femur = gen.add_group("Femur")
-femur.add("fP", int_t, 0,
+femur.add("fP", double_t, 0,
          "Femur P",
-         32, 0, 254)
-femur.add("fI", int_t, 0, 
+         6.6, 0.0, 254.0)
+femur.add("fI", double_t, 0, 
          "Femur I",
-         0, 0, 254)
-femur.add("fD", int_t, 0, 
+         0.0, 0.0, 254.0)
+femur.add("fD", double_t, 0, 
          "Femur D",
-         10, 0, 254)
+         0.05, 0.0, 254.0)
 
 tibia = gen.add_group("Tibia")
-tibia.add("tP", int_t, 0,
+tibia.add("tP", double_t, 0,
          "Tibia P",
-         36, 0, 254)
-tibia.add("tI", int_t, 0, 
+         6.6, 0.0, 254.0)
+tibia.add("tI", double_t, 0, 
          "Tibia I",
-         0, 0, 254)
-tibia.add("tD", int_t, 0, 
+         0.0, 0.0, 254.0)
+tibia.add("tD", double_t, 0, 
          "Tibia D",
-         10, 0, 254)
+         0.05, 0.0, 254.0)
 
 
 exit(gen.generate(PACKAGE, "robo_cont", "gaitControllerParams"))
