--- a/package.xml
+++ b/package.xml
@@ -5,8 +5,7 @@
   <description>The dyret_controller package</description>
 
   <maintainer email="tonnesfn@ifi.uio.no">tonnesfn</maintainer>
-
-  <license>TODO</license>
+  <license>GPL-3.0-or-later</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
